@@ -5,6 +5,7 @@ LEDC-5: Reflect changes in the setup immediately
 LEDC-7: Add option for cyclic animations
 LEDC-9: Store list of color values
 LEDC-11: Update animations
+LEDC-13: Timeout for animations and light
 
 
 V 1.0.0
